--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#12b188" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
 
 
   <!--
